fix minor layout bugs

--- a/_sass/modules/_hero.scss
+++ b/_sass/modules/_hero.scss
@@ -4,6 +4,8 @@
   position: relative;
 
   border-bottom: 2px solid hsl(52, 85%, 51%);
+
+  overflow: hidden;
   
   .hero__headline {
     font-family: 'permanent_markerregular', Arial, sans-serif;
