--- a/_sass/modules/_media-object.scss
+++ b/_sass/modules/_media-object.scss
@@ -5,8 +5,8 @@
   flex-wrap: wrap;
 
   > img {
-    width: 100px;
-    height: 100%;
+    width: auto;
+    height: 100px;
     margin-right: 3rem;
   }
 
