--- a/_sass/modules/_post.scss
+++ b/_sass/modules/_post.scss
@@ -23,3 +23,9 @@
     color: $lightGray;
   }
 }
+
+.post-content {
+  img {
+    max-width: 100%;
+  }
+}
