--- a/_sass/sections/_footer.scss
+++ b/_sass/sections/_footer.scss
@@ -46,6 +46,4 @@ footer {
     fill: $iconsColor;
     margin-top:0.6rem;
   }
-
-  padding-bottom: 1.6rem;
 }
